gcc/testsuite/rust/rustc/ui/parser/keyword-final.rs
fn main() {
    let final = (); // { dg-error "" "" { target *-*-* } }
}

